# Matrix_dynamics

./: CMakeLists.txt  dynamics.h  main.cpp  traj_generate.cpp  traj_generate.h
